[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sounds/open_sfx.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/fire_sfx.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/victory_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/demine_sfx.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=6]

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field" parent="." instance=ExtResource( 1 )]
mines = 1

[node name="OpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="DemineSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FireSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
